1, use rotary to set level 2, use button A and B to set delta
Signed-off-by: david-foo <874605744@qq.com>

--- a/prj_bbc_microbit.conf
+++ b/prj_bbc_microbit.conf
@@ -77,3 +77,6 @@ CONFIG_BT_MESH_NODE_ID_TIMEOUT=60
 #CONFIG_BT_MESH_DEBUG_CRYPTO=y
 #CONFIG_BT_MESH_DEBUG_ADV=y
 #CONFIG_BT_MESH_DEBUG_ACCESS=y
+
+CONFIG_ELEMENT14_MINODE_LIB=y
+CONFIG_ELEMENT14_MINODE_LIB_ROTARY=y
