--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@
 cmake_minimum_required(VERSION 3.13.1)
 set(QEMU_EXTRA_FLAGS -s)
 set(BOARD bbc_microbit)
+set(SHIELD element14_minode)
 
 include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
 project(dimmer)
